RTC6/RTC6 Files/Linux/debian-bullseye/usr/share/scanlab/examples/1/scanlab/rtc6.h

    typedef int32_t LONG;     //  LONG  is assumed to be 4 Bytes
    typedef uint32_t UINT;     //  UINT  is assumed to be 4 Bytes
RTC6_API UINT __stdcall load_zoom_correction_file(const char* Name, const UINT No);
RTC6_API UINT __stdcall load_oct_table_no(const double A, const double B, const UINT No);
RTC6_API UINT __stdcall load_z_table_no(const double A, const double B, const double C, const UINT No);
RTC6_API UINT __stdcall load_z_table(const double A, const double B, const double C);
RTC6_API void __stdcall select_cor_table(const UINT HeadA, const UINT HeadB);
RTC6_API UINT __stdcall set_dsp_mode(const UINT Mode);
RTC6_API LONG __stdcall load_stretch_table(const char* Name, const LONG No, const UINT TableNo);
RTC6_API void __stdcall number_of_correction_tables(const UINT Number);
RTC6_API UINT __stdcall load_z_table_no_20b(const double A, const double B, const double C, const UINT No);
RTC6_API UINT __stdcall load_z_table_20b(const double A, const double B, const double C);
RTC6_API double __stdcall get_head_para(const UINT HeadNo, const UINT ParaNo);
RTC6_API double __stdcall get_table_para(const UINT TableNo, const UINT ParaNo);
RTC6_API void __stdcall n_config_list(const UINT CardNo, const UINT Mem1, const UINT Mem2);
RTC6_API void __stdcall n_get_config_list(const UINT CardNo);
RTC6_API UINT __stdcall n_save_disk(const UINT CardNo, const char* Name, const UINT Mode);
RTC6_API UINT __stdcall n_load_disk(const UINT CardNo, const char* Name, const UINT Mode);
RTC6_API UINT __stdcall n_get_list_space(const UINT CardNo);
RTC6_API void __stdcall config_list(const UINT Mem1, const UINT Mem2);
RTC6_API void __stdcall get_config_list(void);
RTC6_API UINT __stdcall save_disk(const char* Name, const UINT Mode);
RTC6_API UINT __stdcall load_disk(const char* Name, const UINT Mode);
RTC6_API UINT __stdcall get_list_space(void);
RTC6_API void __stdcall n_set_start_list_pos(const UINT CardNo, const UINT ListNo, const UINT Pos);
RTC6_API void __stdcall n_set_start_list(const UINT CardNo, const UINT ListNo);
RTC6_API void __stdcall n_set_start_list_1(const UINT CardNo);
RTC6_API void __stdcall n_set_start_list_2(const UINT CardNo);
RTC6_API void __stdcall n_set_input_pointer(const UINT CardNo, const UINT Pos);
RTC6_API UINT __stdcall n_load_list(const UINT CardNo, const UINT ListNo, const UINT Pos);
RTC6_API void __stdcall n_load_sub(const UINT CardNo, const UINT Index);
RTC6_API void __stdcall n_load_char(const UINT CardNo, const UINT Char);
RTC6_API void __stdcall n_load_text_table(const UINT CardNo, const UINT Index);
RTC6_API void __stdcall n_get_list_pointer(const UINT CardNo, UINT* ListNo, UINT* Pos);
RTC6_API UINT __stdcall n_get_input_pointer(const UINT CardNo);
RTC6_API void __stdcall set_start_list_pos(const UINT ListNo, const UINT Pos);
RTC6_API void __stdcall set_start_list(const UINT ListNo);
RTC6_API void __stdcall set_start_list_1(void);
RTC6_API void __stdcall set_start_list_2(void);
RTC6_API void __stdcall set_input_pointer(const UINT Pos);
RTC6_API UINT __stdcall load_list(const UINT ListNo, const UINT Pos);
RTC6_API void __stdcall load_sub(const UINT Index);
RTC6_API void __stdcall load_char(const UINT Char);
RTC6_API void __stdcall load_text_table(const UINT Index);
RTC6_API void __stdcall get_list_pointer(UINT* ListNo, UINT* Pos);
RTC6_API UINT __stdcall get_input_pointer(void);
RTC6_API void __stdcall n_execute_list_pos(const UINT CardNo, const UINT ListNo, const UINT Pos);
RTC6_API void __stdcall n_execute_at_pointer(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_execute_list(const UINT CardNo, const UINT ListNo);
RTC6_API void __stdcall n_execute_list_1(const UINT CardNo);
RTC6_API void __stdcall n_execute_list_2(const UINT CardNo);
RTC6_API UINT __stdcall n_list_jump_rel_ctrl(const UINT CardNo, const LONG Pos);
RTC6_API void __stdcall n_get_out_pointer(const UINT CardNo, UINT* ListNo, UINT* Pos);
RTC6_API void __stdcall execute_list_pos(const UINT ListNo, const UINT Pos);
RTC6_API void __stdcall execute_at_pointer(const UINT Pos);
RTC6_API void __stdcall execute_list(const UINT ListNo);
RTC6_API void __stdcall execute_list_1(void);
RTC6_API void __stdcall execute_list_2(void);
RTC6_API UINT __stdcall list_jump_rel_ctrl(const LONG Pos);
RTC6_API void __stdcall get_out_pointer(UINT* ListNo, UINT* Pos);
RTC6_API void __stdcall n_auto_change_pos(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_start_loop(const UINT CardNo);
RTC6_API void __stdcall n_quit_loop(const UINT CardNo);
RTC6_API void __stdcall n_pause_list(const UINT CardNo);
RTC6_API void __stdcall n_restart_list(const UINT CardNo);
RTC6_API void __stdcall n_release_wait(const UINT CardNo);
RTC6_API void __stdcall n_stop_execution(const UINT CardNo);
RTC6_API void __stdcall n_set_pause_list_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall n_set_pause_list_not_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall n_auto_change(const UINT CardNo);
RTC6_API void __stdcall n_stop_list(const UINT CardNo);
RTC6_API UINT __stdcall n_get_wait_status(const UINT CardNo);
RTC6_API UINT __stdcall n_read_status(const UINT CardNo);
RTC6_API void __stdcall n_get_status(const UINT CardNo, UINT* Status, UINT* Pos);
RTC6_API void __stdcall auto_change_pos(const UINT Pos);
RTC6_API void __stdcall start_loop(void);
RTC6_API void __stdcall quit_loop(void);
RTC6_API void __stdcall pause_list(void);
RTC6_API void __stdcall restart_list(void);
RTC6_API void __stdcall release_wait(void);
RTC6_API void __stdcall stop_execution(void);
RTC6_API void __stdcall set_pause_list_cond(const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall set_pause_list_not_cond(const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall auto_change(void);
RTC6_API void __stdcall stop_list(void);
RTC6_API UINT __stdcall get_wait_status(void);
RTC6_API UINT __stdcall read_status(void);
RTC6_API void __stdcall get_status(UINT* Status, UINT* Pos);
RTC6_API void __stdcall n_set_extstartpos(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_set_max_counts(const UINT CardNo, const UINT Counts);
RTC6_API void __stdcall n_set_control_mode(const UINT CardNo, const UINT Mode);
RTC6_API void __stdcall n_simulate_ext_stop(const UINT CardNo);
RTC6_API void __stdcall n_simulate_ext_start_ctrl(const UINT CardNo);
RTC6_API void __stdcall n_store_timestamp_counter(const UINT CardNo);
RTC6_API void __stdcall n_get_timestamp_long(const UINT CardNo, UINT* TimeStampL, UINT* TimeStampH);
RTC6_API UINT __stdcall n_get_counts(const UINT CardNo);
RTC6_API UINT __stdcall n_get_startstop_info(const UINT CardNo);
RTC6_API void __stdcall set_extstartpos(const UINT Pos);
RTC6_API void __stdcall set_max_counts(const UINT Counts);
RTC6_API void __stdcall set_control_mode(const UINT Mode);
RTC6_API void __stdcall simulate_ext_stop(void);
RTC6_API void __stdcall simulate_ext_start_ctrl(void);
RTC6_API void __stdcall store_timestamp_counter(void);
RTC6_API void __stdcall get_timestamp_long(UINT* TimeStampL, UINT* TimeStampH);
RTC6_API UINT __stdcall get_counts(void);
RTC6_API UINT __stdcall get_startstop_info(void);
RTC6_API void __stdcall n_copy_dst_src(const UINT CardNo, const UINT Dst, const UINT Src, const UINT Mode);
RTC6_API void __stdcall n_set_char_pointer(const UINT CardNo, const UINT Char, const UINT Pos);
RTC6_API void __stdcall n_set_sub_pointer(const UINT CardNo, const UINT Index, const UINT Pos);
RTC6_API void __stdcall n_set_text_table_pointer(const UINT CardNo, const UINT Index, const UINT Pos);
RTC6_API void __stdcall n_set_char_table(const UINT CardNo, const UINT Index, const UINT Pos);
RTC6_API UINT __stdcall n_get_char_pointer(const UINT CardNo, const UINT Char);
RTC6_API UINT __stdcall n_get_sub_pointer(const UINT CardNo, const UINT Index);
RTC6_API UINT __stdcall n_get_text_table_pointer(const UINT CardNo, const UINT Index);
RTC6_API void __stdcall copy_dst_src(const UINT Dst, const UINT Src, const UINT Mode);
RTC6_API void __stdcall set_char_pointer(const UINT Char, const UINT Pos);
RTC6_API void __stdcall set_sub_pointer(const UINT Index, const UINT Pos);
RTC6_API void __stdcall set_text_table_pointer(const UINT Index, const UINT Pos);
RTC6_API void __stdcall set_char_table(const UINT Index, const UINT Pos);
RTC6_API UINT __stdcall get_char_pointer(const UINT Char);
RTC6_API UINT __stdcall get_sub_pointer(const UINT Index);
RTC6_API UINT __stdcall get_text_table_pointer(const UINT Index);
RTC6_API void __stdcall n_time_update(const UINT CardNo);
RTC6_API void __stdcall n_time_control_eth(const UINT CardNo, const double PPM);
RTC6_API void __stdcall n_set_serial_step(const UINT CardNo, const UINT No, const UINT Step);
RTC6_API void __stdcall n_select_serial_set(const UINT CardNo, const UINT No);
RTC6_API void __stdcall n_set_serial(const UINT CardNo, const UINT No);
RTC6_API double __stdcall n_get_serial(const UINT CardNo);
RTC6_API double __stdcall n_get_list_serial(const UINT CardNo, UINT* SetNo);
RTC6_API void __stdcall time_update(void);
RTC6_API void __stdcall time_control_eth(const double PPM);
RTC6_API void __stdcall set_serial_step(const UINT No, const UINT Step);
RTC6_API void __stdcall select_serial_set(const UINT No);
RTC6_API void __stdcall set_serial(const UINT No);
RTC6_API double __stdcall get_serial(void);
RTC6_API double __stdcall get_list_serial(UINT* SetNo);
RTC6_API void __stdcall n_write_io_port_mask(const UINT CardNo, const UINT Value, const UINT Mask);
RTC6_API void __stdcall n_write_8bit_port(const UINT CardNo, const UINT Value);
RTC6_API UINT __stdcall n_read_io_port(const UINT CardNo);
RTC6_API UINT __stdcall n_read_io_port_buffer(const UINT CardNo, const UINT Index, UINT* Value, LONG* XPos, LONG* YPos, UINT* Time);
RTC6_API UINT __stdcall n_get_io_status(const UINT CardNo);
RTC6_API UINT __stdcall n_read_analog_in(const UINT CardNo);