RTC6/RTC6 Files/Windows/RTC6Import.pas

function  load_zoom_correction_file(Name: PChar; No: LongWord): LongWord; stdcall; external RTC6DLL;
function  load_oct_table_no(A: Double; B: Double; No: LongWord): LongWord; stdcall; external RTC6DLL;
function  load_z_table_no(A: Double; B: Double; C: Double; No: LongWord): LongWord; stdcall; external RTC6DLL;
function  load_z_table(A: Double; B: Double; C: Double): LongWord; stdcall; external RTC6DLL;
procedure select_cor_table(HeadA: LongWord; HeadB: LongWord); stdcall; external RTC6DLL;
function  set_dsp_mode(Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  load_stretch_table(Name: PChar; No: LongInt; TableNo: LongWord): LongInt; stdcall; external RTC6DLL;
procedure number_of_correction_tables(Number: LongWord); stdcall; external RTC6DLL;
function  load_z_table_no_20b(A: Double; B: Double; C: Double; No: LongWord): LongWord; stdcall; external RTC6DLL;
function  load_z_table_20b(A: Double; B: Double; C: Double): LongWord; stdcall; external RTC6DLL;
function  get_head_para(HeadNo: LongWord; ParaNo: LongWord): Double; stdcall; external RTC6DLL;
function  get_table_para(TableNo: LongWord; ParaNo: LongWord): Double; stdcall; external RTC6DLL;
procedure n_config_list(CardNo: LongWord; Mem1: LongWord; Mem2: LongWord); stdcall; external RTC6DLL;
procedure n_get_config_list(CardNo: LongWord); stdcall; external RTC6DLL;
function  n_save_disk(CardNo: LongWord; Name: PChar; Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_load_disk(CardNo: LongWord; Name: PChar; Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_list_space(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure config_list(Mem1: LongWord; Mem2: LongWord); stdcall; external RTC6DLL;
procedure get_config_list(); stdcall; external RTC6DLL;
function  save_disk(Name: PChar; Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  load_disk(Name: PChar; Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  get_list_space(): LongWord; stdcall; external RTC6DLL;
procedure n_set_start_list_pos(CardNo: LongWord; ListNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_start_list(CardNo: LongWord; ListNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_start_list_1(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_start_list_2(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_input_pointer(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
function  n_load_list(CardNo: LongWord; ListNo: LongWord; Pos: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_load_sub(CardNo: LongWord; Index: LongWord); stdcall; external RTC6DLL;
procedure n_load_char(CardNo: LongWord; Char: LongWord); stdcall; external RTC6DLL;
procedure n_load_text_table(CardNo: LongWord; Index: LongWord); stdcall; external RTC6DLL;
procedure n_get_list_pointer(CardNo: LongWord; var ListNo: LongWord; var Pos: LongWord); stdcall; external RTC6DLL;
function  n_get_input_pointer(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure set_start_list_pos(ListNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure set_start_list(ListNo: LongWord); stdcall; external RTC6DLL;
procedure set_start_list_1(); stdcall; external RTC6DLL;
procedure set_start_list_2(); stdcall; external RTC6DLL;
procedure set_input_pointer(Pos: LongWord); stdcall; external RTC6DLL;
function  load_list(ListNo: LongWord; Pos: LongWord): LongWord; stdcall; external RTC6DLL;
procedure load_sub(Index: LongWord); stdcall; external RTC6DLL;
procedure load_char(Char: LongWord); stdcall; external RTC6DLL;
procedure load_text_table(Index: LongWord); stdcall; external RTC6DLL;
procedure get_list_pointer(var ListNo: LongWord; var Pos: LongWord); stdcall; external RTC6DLL;
function  get_input_pointer(): LongWord; stdcall; external RTC6DLL;
procedure n_execute_list_pos(CardNo: LongWord; ListNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_execute_at_pointer(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_execute_list(CardNo: LongWord; ListNo: LongWord); stdcall; external RTC6DLL;
procedure n_execute_list_1(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_execute_list_2(CardNo: LongWord); stdcall; external RTC6DLL;
function  n_list_jump_rel_ctrl(CardNo: LongWord; Pos: LongInt): LongWord; stdcall; external RTC6DLL;
procedure n_get_out_pointer(CardNo: LongWord; var ListNo: LongWord; var Pos: LongWord); stdcall; external RTC6DLL;
procedure execute_list_pos(ListNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure execute_at_pointer(Pos: LongWord); stdcall; external RTC6DLL;
procedure execute_list(ListNo: LongWord); stdcall; external RTC6DLL;
procedure execute_list_1(); stdcall; external RTC6DLL;
procedure execute_list_2(); stdcall; external RTC6DLL;
function  list_jump_rel_ctrl(Pos: LongInt): LongWord; stdcall; external RTC6DLL;
procedure get_out_pointer(var ListNo: LongWord; var Pos: LongWord); stdcall; external RTC6DLL;
procedure n_auto_change_pos(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_start_loop(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_quit_loop(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_pause_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_restart_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_release_wait(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_stop_execution(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_pause_list_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure n_set_pause_list_not_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure n_auto_change(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_stop_list(CardNo: LongWord); stdcall; external RTC6DLL;
function  n_get_wait_status(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_read_status(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_get_status(CardNo: LongWord; var Status: LongWord; var Pos: LongWord); stdcall; external RTC6DLL;
procedure auto_change_pos(Pos: LongWord); stdcall; external RTC6DLL;
procedure start_loop(); stdcall; external RTC6DLL;
procedure quit_loop(); stdcall; external RTC6DLL;
procedure pause_list(); stdcall; external RTC6DLL;
procedure restart_list(); stdcall; external RTC6DLL;
procedure release_wait(); stdcall; external RTC6DLL;
procedure stop_execution(); stdcall; external RTC6DLL;
procedure set_pause_list_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure set_pause_list_not_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure auto_change(); stdcall; external RTC6DLL;
procedure stop_list(); stdcall; external RTC6DLL;
function  get_wait_status(): LongWord; stdcall; external RTC6DLL;
function  read_status(): LongWord; stdcall; external RTC6DLL;
procedure get_status(var Status: LongWord; var Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_extstartpos(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_max_counts(CardNo: LongWord; Counts: LongWord); stdcall; external RTC6DLL;
procedure n_set_control_mode(CardNo: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_simulate_ext_stop(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_simulate_ext_start_ctrl(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_store_timestamp_counter(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_get_timestamp_long(CardNo: LongWord; var TimeStampL: LongWord; var TimeStampH: LongWord); stdcall; external RTC6DLL;
function  n_get_counts(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_startstop_info(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure set_extstartpos(Pos: LongWord); stdcall; external RTC6DLL;
procedure set_max_counts(Counts: LongWord); stdcall; external RTC6DLL;
procedure set_control_mode(Mode: LongWord); stdcall; external RTC6DLL;
procedure simulate_ext_stop(); stdcall; external RTC6DLL;
procedure simulate_ext_start_ctrl(); stdcall; external RTC6DLL;
procedure store_timestamp_counter(); stdcall; external RTC6DLL;
procedure get_timestamp_long(var TimeStampL: LongWord; var TimeStampH: LongWord); stdcall; external RTC6DLL;
function  get_counts(): LongWord; stdcall; external RTC6DLL;
function  get_startstop_info(): LongWord; stdcall; external RTC6DLL;
procedure n_copy_dst_src(CardNo: LongWord; Dst: LongWord; Src: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_set_char_pointer(CardNo: LongWord; Char: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_sub_pointer(CardNo: LongWord; Index: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_text_table_pointer(CardNo: LongWord; Index: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_char_table(CardNo: LongWord; Index: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
function  n_get_char_pointer(CardNo: LongWord; Char: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_sub_pointer(CardNo: LongWord; Index: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_text_table_pointer(CardNo: LongWord; Index: LongWord): LongWord; stdcall; external RTC6DLL;
procedure copy_dst_src(Dst: LongWord; Src: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure set_char_pointer(Char: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure set_sub_pointer(Index: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure set_text_table_pointer(Index: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure set_char_table(Index: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
function  get_char_pointer(Char: LongWord): LongWord; stdcall; external RTC6DLL;
function  get_sub_pointer(Index: LongWord): LongWord; stdcall; external RTC6DLL;
function  get_text_table_pointer(Index: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_time_update(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_time_control_eth(CardNo: LongWord; PPM: Double); stdcall; external RTC6DLL;
procedure n_set_serial_step(CardNo: LongWord; No: LongWord; Step: LongWord); stdcall; external RTC6DLL;
procedure n_select_serial_set(CardNo: LongWord; No: LongWord); stdcall; external RTC6DLL;
procedure n_set_serial(CardNo: LongWord; No: LongWord); stdcall; external RTC6DLL;
function  n_get_serial(CardNo: LongWord): Double; stdcall; external RTC6DLL;
function  n_get_list_serial(CardNo: LongWord; var SetNo: LongWord): Double; stdcall; external RTC6DLL;
procedure time_update(); stdcall; external RTC6DLL;
procedure time_control_eth(PPM: Double); stdcall; external RTC6DLL;
procedure set_serial_step(No: LongWord; Step: LongWord); stdcall; external RTC6DLL;
procedure select_serial_set(No: LongWord); stdcall; external RTC6DLL;
procedure set_serial(No: LongWord); stdcall; external RTC6DLL;
function  get_serial(): Double; stdcall; external RTC6DLL;
function  get_list_serial(var SetNo: LongWord): Double; stdcall; external RTC6DLL;
procedure n_write_io_port_mask(CardNo: LongWord; Value: LongWord; Mask: LongWord); stdcall; external RTC6DLL;
procedure n_write_8bit_port(CardNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
function  n_read_io_port(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_read_io_port_buffer(CardNo: LongWord; Index: LongWord; var Value: LongWord; var XPos: LongInt; var YPos: LongInt; var Time: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_io_status(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_read_analog_in(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
